2001-03-08	Joel Sherrill <joel@OARcorp.com>

	* mips-stub.c: Removed warnings.

2001-03-05	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* mips-stub.c: Debugged & tweaked the gdb command processing,
	zbreak stuff, breakpoint and step code.  Implemented 'T' command
	support and debugged remote gdb support w/ the Mongoose bsp.
	Added the memory segment support.
	* memlimits.h: Disabled all contents in favor of memory sement
	support.  This file could probably go away.
	* rtems-stub-glue.c (rtems_gdb_index_to_stub_id()): New routine.
	rtems_gdb_stub_get_register_from_context(): Implemented MIPS version.
	rtems_gdb_stub_get_offsets(): Implemented MIPS version.
	* README: Updated.

2001-03-01	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: Corrected previous entry. 

2002-02-27	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* mips-stub.c: Modified isr install routine to
	capture all exceptions.

2001-02-27	Joel Sherrill <joel@OARcorp.com>

	* Significant modifications including adding thread support, the 'X'
	command, and reorganizing so that target CPU independent routines
	could be reused.
	* gdb_if.h: Added numerous prototypes.
	* mips-stub.c: Added thread support as well as 'X' command.
	Also noticed that the 'P' command was from the mips protocol.
	* rtems-stub-glue.c: New file.  This file contains all generic
	support which should be able to be reused on another target CPU.

2002-02-08	Joel Sherrill <joel@OARcorp.com>

	* mips-stub.c (handle_exception): Prototype changed to be an RTEMS 
	entry point.  Added comments about possible need to flush cache.
	(mips_gdb_stub_install): New routine.

2002-02-08	Joel Sherrill <joel@OARcorp.com>

	* Makefile, stubinit.S, r46kstub.ld, ioaddr.h: Removed as unused
	with RTEMS.
	* r46kstub.c: Renamed to mips-stub.c.
	* mips-stub.c: New file -- was r46kstub.c.
	* memlimits.h: New file was limits.h.
	* limits.h: Removed.
	* r4600.h: Eliminated need for this file.
	* README: Updated.
 	* gdb_if.h: Added CVS Id.